--- a/Codigo/app/src/main/res/layout/layout_ejercicio_google.xml
+++ b/Codigo/app/src/main/res/layout/layout_ejercicio_google.xml
@@ -30,7 +30,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:gravity="center"
-                android:text="Nombre"/>
+                android:text="@string/name"/>
         </LinearLayout>   
 
     </com.google.android.material.card.MaterialCardView>
