--- a/DragonBallFinal/app/src/main/res/layout/activity_main.xml
+++ b/DragonBallFinal/app/src/main/res/layout/activity_main.xml
@@ -46,11 +46,19 @@
         android:layout_height="wrap_content"
         android:layout_marginVertical="18dp"
         android:backgroundTint="#FE8700"
-        android:text="Login"
         android:enabled="false"
+        android:text="Login"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/et_pass" />
+        app:layout_constraintTop_toBottomOf="@+id/switchRememberUser" />
 
+    <Switch
+        android:id="@+id/switchRememberUser"
+        android:layout_marginTop="6dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Recordar Usuario"
+        app:layout_constraintStart_toStartOf="@+id/et_pass"
+        app:layout_constraintTop_toBottomOf="@+id/et_pass" />
 </androidx.constraintlayout.widget.ConstraintLayout>
