--- a/DragonBallFinal/app/src/main/res/layout/activity_hero_list.xml
+++ b/DragonBallFinal/app/src/main/res/layout/activity_hero_list.xml
@@ -6,4 +6,26 @@
     android:layout_height="match_parent"
     tools:context=".HeroListActivity">
 
+    <TextView
+        android:id="@+id/textView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_margin="12dp"
+        android:text="@string/select_hero"
+        android:textSize="26sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/rvHeroes"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView"
+        tools:listitem="@layout/item_hero"
+        tools:itemCount="8"
+        />
 </androidx.constraintlayout.widget.ConstraintLayout>
