--- a/DragonBallFinal/app/src/main/res/values/colors.xml
+++ b/DragonBallFinal/app/src/main/res/values/colors.xml
@@ -2,4 +2,6 @@
 <resources>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="dark_orange">#FF5722</color>
+    <color name="orange">#FFC107</color>
 </resources>
