--- a/DragonBallFinal/app/src/main/res/layout/activity_hero_list.xml
+++ b/DragonBallFinal/app/src/main/res/layout/activity_hero_list.xml
@@ -28,4 +28,14 @@
         tools:listitem="@layout/item_hero"
         tools:itemCount="8"
         />
+
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/fabBorrar"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_margin="12dp"
+        android:clickable="true"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:srcCompat="@android:drawable/ic_menu_delete" />
 </androidx.constraintlayout.widget.ConstraintLayout>
